--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="video-container">
         <video id="ourMovie" controls poster="https://source.unsplash.com/1600x900/?movie-theater">
-            <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4">
+            <source src="./video.mp4" type="video/mp4">
            
         </video>
     </div>
