--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🍿 STEFLIX</title>
+    <title>🍿 DATEFLIX</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <header class="header">
-        <div class="logo">STEFLIX</div>
+        <div class="logo">DATEFLIX</div>
     </header>
 
     <div class="video-container">
         <video id="ourMovie" controls poster="https://source.unsplash.com/1600x900/?movie-theater">
-            <source src="./video.mp4" type="video/mp4">
+            <source src="YOUR_VIDEO_NAME" type="video/mp4">
            
         </video>
     </div>
 
     <section class="hero">
         <div class="hero-content">
-            <h1 class="hero-title">The Virtual Movie Night</h1>
+            <h1 class="hero-title">Virtual Movie Night</h1>
             <p class="hero-description">
-                Genre: Drama-Com(edy) | ⭐ Rating: 10/10 Would Watch Again<br>
+                Genre: Rom-Com(edy) | ⭐ Rating: 10/10 Would Watch Again<br>
                 Two stars navigate relentless buffering wheels in this gripping tale<br>
                 of digital odyssey. "Will their WiFi survive?" - The Streaming Times
             </p>
@@ -34,15 +34,15 @@
         <div class="info-grid">
             <div class="info-item">
                 <h3>🌟 Starring</h3>
-                <p>Larissa Avelar<br>Stefano Zago as "The One Worth Buffering For"</p>
+                <p>Your name<br>Your crush1s name as "The One Worth Buffering For"</p>
             </div>
             <div class="info-item">
                 <h3>🎥 Direction</h3>
-                <p>Larissa Avelar<br>"Master of the Pause-Play Coordination"</p>
+                <p>Your name<br>"Master of the Pause-Play Coordination"</p>
             </div>
             <div class="info-item">
                 <h3>📜 Script</h3>
-                <p>Larissa Avelar<br>"Dialogue Mostly Consisting of 'Wait, my screen froze!'"</p>
+                <p>Your name<br>"Dialogue Mostly Consisting of 'Wait, my screen froze!'"</p>
             </div>
             <div class="info-item">
                 <h3>🏆 Awards</h3>
