--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="info-grid">
             <div class="info-item">
                 <h3>🌟 Starring</h3>
-                <p>Your name<br>Your love one as "The One Worth Buffering For"</p>
+                <p>Your name<br>Your dear one as "The One Worth Buffering For"</p>
             </div>
             <div class="info-item">
                 <h3>🎥 Direction</h3>
